EDIT: [Script] Fix scaling on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,28 +7,6 @@ body{
     font-family: DM-Serif;
 }
 
-h1{
-    font-size: 8rem;
-}
-
-h2{
-    font-size: 5rem;
-}
-
-h3{
-    font-size: 4rem;
-}
-
-h4{
-    font-size: 3rem;
-}
-h5{
-    font-size: 2rem;
-}
-h6{
-    font-size: 1rem;
-}
-
 /*
 h1, h2, h3, h4, h5, p{
     color: $color-white;
